Added links in app

--- a/src/app/components/home-player-card/home-player-card.component.html
+++ b/src/app/components/home-player-card/home-player-card.component.html
@@ -1,5 +1,5 @@
 <div class="home-player-card">
     <img [height]="50" [width]="50" alt="" ngSrc="{{player().avatarUrl}}" class="player-avatar"/>
-    <a class="player-pseudo" (click)="clickOnPseudo.emit()">{{ player().pseudo }}</a>
+    <a class="player-pseudo tq-link" (click)="clickOnPseudo.emit()">{{ player().pseudo }}</a>
     <span class="trophy-count">{{ trophyCount() | number }} trophies last week</span>
 </div>
