--- a/src/app/components/profile-game-card/profile-game-card.component.scss
+++ b/src/app/components/profile-game-card/profile-game-card.component.scss
@@ -69,8 +69,8 @@
   }
 
   .profile-game-title {
+    color: $tq-blue-medium;
     font-size: 15px;
-    cursor: pointer;
   }
 
   .game-block-end {
