--- a/src/app/components/home-game-card/home-game-card.component.html
+++ b/src/app/components/home-game-card/home-game-card.component.html
@@ -1,7 +1,7 @@
 <div class="home-game-card">
     <div class="game-infos">
         <img alt="" [src]="game().imageUrl" class="game-image"/>
-        <a class="game-title" (click)="clickOnGameTitle.emit()">{{ game().title }}</a>
+        <a class="game-title tq-link" (click)="clickOnGameTitle.emit()">{{ game().title }}</a>
     </div>
     <div class="players">
         {{ game().recentPlayers | number }} players
