--- a/src/app/components/profile-game-card/profile-game-card.component.html
+++ b/src/app/components/profile-game-card/profile-game-card.component.html
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="platform-and-title">
-            <a (click)="clickOnTitle.emit()" class="profile-game-title">{{ game().title }}</a>
+            <a (click)="clickOnTitle.emit()" class="profile-game-title tq-link">{{ game().title }}</a>
             <app-platform-label [platform]="game().platform" class="platform"/>
         </div>
     </div>
