Added game page (without player data) (#35)
* Handled case when no popular games or recent players in home page

* Added game endpoint with no player informations

* Fix hidden trophies in game page

* Added links in app

* Bump version

* Fix tests

--- a/src/app/components/home-game-card/home-game-card.component.html
+++ b/src/app/components/home-game-card/home-game-card.component.html
@@ -1,7 +1,7 @@
 <div class="home-game-card">
     <div class="game-infos">
         <img alt="" [src]="game().imageUrl" class="game-image"/>
-        <div class="game-title">{{ game().title }}</div>
+        <a class="game-title tq-link" (click)="clickOnGameTitle.emit()">{{ game().title }}</a>
     </div>
     <div class="players">
         {{ game().recentPlayers | number }} players
