--- a/src/app/game/components/game-page/game-page.component.scss
+++ b/src/app/game/components/game-page/game-page.component.scss
@@ -31,28 +31,11 @@
     font-weight: 600;
   }
 
-  .trophy-list-wrapper {
+  app-game-trophy-list {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-
-  .group-trophy-list {
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .game-page-trophy-card {
-    width: 100%;
-  }
-
-  .trophy-separator {
-    color: $tq-blue-medium;
-    margin: 5px;
-    width: 95%;
   }
 
   .error-message-wrapper {
