--- a/src/app/game/components/game-page/game-page.component.scss
+++ b/src/app/game/components/game-page/game-page.component.scss
@@ -31,7 +31,7 @@
     font-weight: 600;
   }
 
-  app-game-trophy-list {
+  tq-game-trophy-list {
     width: 100%;
     display: flex;
     flex-direction: column;
