--- a/src/app/players/components/add-player-form/add-player-form.component.html
+++ b/src/app/players/components/add-player-form/add-player-form.component.html
@@ -19,11 +19,11 @@
         <mat-spinner class="loading-spinner"/>
         <span class="loading-message">Adding user... this step may take a minute.</span>
     } @else if (isAlreadyInDatabase()) {
-        <app-error-message [errorMessage]="inputValue + ' is already registered in TrophyQuest'"/>
+        <tq-error-message [errorMessage]="inputValue + ' is already registered in TrophyQuest'"/>
     } @else if (hasFailedAddPlayer()) {
-        <app-error-message [errorMessage]="'An error occurred when adding player ' + inputValue +' in Trophyquest'"/>
+        <tq-error-message [errorMessage]="'An error occurred when adding player ' + inputValue +' in Trophyquest'"/>
     } @else if (hasSucceededAddPlayer()) {
-        <app-success-message [message]="inputValue + ' has been added to TrophyQuest!'" [hasButton]="true"
-                             (onClick)="refreshPlayers.emit()"/>
+        <tq-success-message [message]="inputValue + ' has been added to TrophyQuest!'" [hasButton]="true"
+                            (onClick)="refreshPlayers.emit()"/>
     }
 </div>
