--- a/src/app/players/components/players-page/players-page.component.scss
+++ b/src/app/players/components/players-page/players-page.component.scss
@@ -7,13 +7,13 @@
   gap: 20px;
 }
 
-app-player-list {
+tq-player-list {
   width: 90%;
   padding-top: 20px;
   padding-left: 10%;
   padding-right: 10%;
 }
 
-app-add-player-form {
+tq-add-player-form {
   padding-top: 20px;
 }
