--- a/src/app/game/components/game-trophy-list/game-trophy-list.component.html
+++ b/src/app/game/components/game-trophy-list/game-trophy-list.component.html
@@ -3,7 +3,7 @@
         @if (i !== 0) {
             <hr class="trophy-separator"/>
         }
-        <app-game-trophy-card [showHiddenTrophies]="trophyFilters().showHidden" [trophy]="trophy"/>
+        <tq-game-trophy-card [showHiddenTrophies]="trophyFilters().showHidden" [trophy]="trophy"/>
     </div>
 }
 @for (dlc of dlcs(); track dlc.groupName) {
@@ -14,7 +14,7 @@
                 @if (i !== 0) {
                     <hr class="trophy-separator"/>
                 }
-                <app-game-trophy-card [showHiddenTrophies]="trophyFilters().showHidden" [trophy]="trophy"/>
+                <tq-game-trophy-card [showHiddenTrophies]="trophyFilters().showHidden" [trophy]="trophy"/>
             }
         </div>
     }
