--- a/src/app/home/components/home-game-list/home-game-list.component.html
+++ b/src/app/home/components/home-game-list/home-game-list.component.html
@@ -1,22 +1,22 @@
-<app-trophyquest-block>
-    <ng-template appBlockHeader>
+<tq-trophyquest-block>
+    <ng-template tqBlockHeader>
         <span class="title">Most recent popular games</span>
     </ng-template>
-    <ng-template appBlockContent>
+    <ng-template tqBlockContent>
         @if (hasNoPopularGames()) {
             <div class="no-popular-games">No popular games</div>
         } @else if (isLoadingGames()) {
             <mat-spinner/>
         } @else if (hasFailedLoadingGames()) {
-            <app-error-message [errorMessage]="'Failed to load games'"/>
+            <tq-error-message [errorMessage]="'Failed to load games'"/>
         } @else {
             @for (game of games(); track game.id) {
                 @if ($index !== 0) {
                     <hr class="separator"/>
                 }
-                <app-home-game-card [game]="game" (clickOnGameTitle)="clickOnGameTitle.emit(game.id)"
-                                    class="home-game-card"/>
+                <tq-home-game-card [game]="game" (clickOnGameTitle)="clickOnGameTitle.emit(game.id)"
+                                   class="home-game-card"/>
             }
         }
     </ng-template>
-</app-trophyquest-block>
+</tq-trophyquest-block>
