--- a/src/app/home/components/home-player-list/home-player-list.component.html
+++ b/src/app/home/components/home-player-list/home-player-list.component.html
@@ -1,32 +1,32 @@
-<app-trophyquest-block>
-    <ng-template appBlockHeader>
+<tq-trophyquest-block>
+    <ng-template tqBlockHeader>
         <span class="title">Top recent players</span>
     </ng-template>
-    <ng-template appBlockContent>
+    <ng-template tqBlockContent>
         @if (hasNoRecentPlayers()) {
             <div class="no-recent-players">No recent players</div>
         } @else if (isLoadingPlayers()) {
             <mat-spinner/>
         } @else if (hasFailedLoadingPlayers()) {
-            <app-error-message [errorMessage]="'Failed to load players'"/>
+            <tq-error-message [errorMessage]="'Failed to load players'"/>
         } @else {
             <div class="most-active-players">
                 @for (recentPlayer of players(); track recentPlayer.player.id) {
-                    <app-section-list>
-                        <ng-template appSectionListHeader>
-                            <app-home-player-card [player]="recentPlayer.player"
-                                                  [trophyCount]="recentPlayer.recentTrophyCount"
-                                                  (clickOnPseudo)="clickOnPlayer.emit(recentPlayer.player.id)"/>
+                    <tq-section-list>
+                        <ng-template tqSectionListHeader>
+                            <tq-home-player-card [player]="recentPlayer.player"
+                                                 [trophyCount]="recentPlayer.recentTrophyCount"
+                                                 (clickOnPseudo)="clickOnPlayer.emit(recentPlayer.player.id)"/>
                         </ng-template>
-                        <ng-template appSectionListContent>
+                        <ng-template tqSectionListContent>
                             @for (trophy of recentPlayer.lastObtainedTrophies; track trophy.id) {
-                                <app-home-trophy-card [trophy]="trophy" class="home-trophy-card"
-                                                      (clickOnGameTitle)="clickOnGame.emit({gameId: trophy.gameId, playerId: recentPlayer.player.id})"/>
+                                <tq-home-trophy-card [trophy]="trophy" class="home-trophy-card"
+                                                     (clickOnGameTitle)="clickOnGame.emit({gameId: trophy.gameId, playerId: recentPlayer.player.id})"/>
                             }
                         </ng-template>
-                    </app-section-list>
+                    </tq-section-list>
                 }
             </div>
         }
     </ng-template>
-</app-trophyquest-block>
+</tq-trophyquest-block>
