--- a/src/app/players/components/players-page/players-page.component.html
+++ b/src/app/players/components/players-page/players-page.component.html
@@ -1,13 +1,13 @@
 <div class="players-page container container-fluid">
-    <app-add-player-form [status]="addPlayerStatus()"
-                         (refreshPlayers)="retrievePlayers()"
-                         (addPlayer)="addPlayer($event)"/>
+    <tq-add-player-form [status]="addPlayerStatus()"
+                        (refreshPlayers)="retrievePlayers()"
+                        (addPlayer)="addPlayer($event)"/>
 
-    <app-player-list [status]="playerListStatus()"
-                     [players]="players()"
-                     [total]="totalPlayers()"
-                     (retrievePlayers)="retrievePlayers()"
-                     (loadMorePlayers)="loadMorePlayers()"
-                     (clickOnPlayer)="navigateToProfilePage($event)"
-                     (clickOnGame)="navigateToPlayerGamePage($event.gameId, $event.playerId)"/>
+    <tq-player-list [status]="playerListStatus()"
+                    [players]="players()"
+                    [total]="totalPlayers()"
+                    (retrievePlayers)="retrievePlayers()"
+                    (loadMorePlayers)="loadMorePlayers()"
+                    (clickOnPlayer)="navigateToProfilePage($event)"
+                    (clickOnGame)="navigateToPlayerGamePage($event.gameId, $event.playerId)"/>
 </div>
