--- a/src/app/home/components/home-game-list/home-game-list.component.html
+++ b/src/app/home/components/home-game-list/home-game-list.component.html
@@ -1,4 +1,4 @@
-<tq-trophyquest-block>
+<tq-block>
     <ng-template tqBlockHeader>
         <span class="title">Most recent popular games</span>
     </ng-template>
@@ -19,4 +19,4 @@
             }
         }
     </ng-template>
-</tq-trophyquest-block>
+</tq-block>
