--- a/src/app/home/components/home-player-list/home-player-list.component.html
+++ b/src/app/home/components/home-player-list/home-player-list.component.html
@@ -1,4 +1,4 @@
-<tq-trophyquest-block>
+<tq-block>
     <ng-template tqBlockHeader>
         <span class="title">Top recent players</span>
     </ng-template>
@@ -29,4 +29,4 @@
             </div>
         }
     </ng-template>
-</tq-trophyquest-block>
+</tq-block>
