--- a/src/app/home/components/home-summary/home-summary.component.html
+++ b/src/app/home/components/home-summary/home-summary.component.html
@@ -1,4 +1,4 @@
-<tq-trophyquest-block>
+<tq-block>
     <ng-template tqBlockHeader>
         <span class="summary-title">TrophyQuest</span>
     </ng-template>
@@ -24,4 +24,4 @@
             </div>
         }
     </ng-template>
-</tq-trophyquest-block>
+</tq-block>
