--- a/src/app/core/trophy-count-displayer/trophy-count-displayer.component.html
+++ b/src/app/core/trophy-count-displayer/trophy-count-displayer.component.html
@@ -2,7 +2,7 @@
     @if (trophyCount().platinum > 0) {
         <div [style.flex-direction]="flexDirection()" class="trophy-item platinum-trophy">
             <img [height]="iconSizePx()" [width]="iconSizePx()" alt=""
-                 ngSrc="assets/icons/trophy-platinum.png"/>
+                 ngSrc="../../../assets/icons/trophy-platinum.png"/>
             <span [class.trophy-count-horizontal]="isLabelHorizontal()" [style.font-size]="textSizePx() + 'px'"
                   class="trophy-count">{{ trophyCount().platinum || '-' }}</span>
         </div>
@@ -11,7 +11,7 @@
     @if (trophyCount().gold > 0) {
         <div [style.flex-direction]="flexDirection()" class="trophy-item gold-trophy">
             <img [height]="iconSizePx()" [width]="iconSizePx()" alt=""
-                 ngSrc="assets/icons/trophy-gold.png"/>
+                 ngSrc="../../../assets/icons/trophy-gold.png"/>
             <span [class.trophy-count-horizontal]="isLabelHorizontal()" [style.font-size]="textSizePx() + 'px'"
                   class="trophy-count">{{ trophyCount().gold || '-' }}</span>
         </div>
@@ -20,7 +20,7 @@
     @if (trophyCount().silver > 0) {
         <div [style.flex-direction]="flexDirection()" class="trophy-item silver-trophy">
             <img [height]="iconSizePx()" [width]="iconSizePx()" alt=""
-                 ngSrc="assets/icons/trophy-silver.png"/>
+                 ngSrc="../../../assets/icons/trophy-silver.png"/>
             <span [class.trophy-count-horizontal]="isLabelHorizontal()" [style.font-size]="textSizePx() + 'px'"
                   class="trophy-count">{{ trophyCount().silver || '-' }}</span>
         </div>
@@ -29,7 +29,7 @@
     @if (trophyCount().bronze > 0) {
         <div [style.flex-direction]="flexDirection()" class="trophy-item bronze-trophy">
             <img [height]="iconSizePx()" [width]="iconSizePx()" alt=""
-                 ngSrc="assets/icons/trophy-bronze.png"/>
+                 ngSrc="../../../assets/icons/trophy-bronze.png"/>
             <span [class.trophy-count-horizontal]="isLabelHorizontal()" [style.font-size]="textSizePx() + 'px'"
                   class="trophy-count">{{ trophyCount().bronze || '-' }}</span>
         </div>
