--- a/src/app/game/components/game-trophy-filters/game-trophy-filters.component.html
+++ b/src/app/game/components/game-trophy-filters/game-trophy-filters.component.html
@@ -8,7 +8,7 @@
         <div class="trophy-filter">
             <span class="trophy-filter-label">Select trophy earned type</span>
 
-            <mat-radio-group [value]="filter()" (change)="changeFilter($event.value)">
+            <mat-radio-group [value]="filters().earned" (change)="changeFilter($event.value)">
                 <mat-radio-button value="all">All</mat-radio-button>
                 <mat-radio-button value="earned">Earned</mat-radio-button>
                 <mat-radio-button value="notEarned">Not earned</mat-radio-button>
