--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,3 +101,15 @@ body {
     transform: translateY(0);
   }
 }
+
+.spinner-container {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+
+  mat-spinner {
+    @include mat.progress-spinner-overrides((
+            active-indicator-color: $tq-blue-medium,
+    ));
+  }
+}
