--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,11 +1,16 @@
 <nav class="navbar">
     <div class="navbar-left" routerLink="/home">
-        <img alt="" class="navbar-logo" height="32" ngSrc="../../../../assets/icons/trophyquest-icon-32.png"
+        <img alt="" class="navbar-logo" height="32" ngSrc="/assets/icons/trophyquest-icon-32.png"
              width="32"/>
         <span class="navbar-title">TrophyQuest</span>
     </div>
 
     <ul class="navbar-links">
+        <li>
+            <a id="navbar-mapping-link" routerLink="/trophy-set-mapping-validation" routerLinkActive="active">
+                Trophy set Mapping Validation
+            </a>
+        </li>
         <li><a id="navbar-players-link" routerLink="/players" routerLinkActive="active">Players</a></li>
     </ul>
 </nav>
