--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -13,7 +13,7 @@
   justify-content: space-between;
   padding: 0.5rem 1.5rem;
   background: $tq-blue-medium;
-  color: #fff;
+  color: $tq-white;
   border-bottom: 1px solid #2a2a2a;
 
   .navbar-logo {
@@ -35,17 +35,18 @@
   .navbar-links {
     list-style: none;
     display: flex;
-    gap: 1rem;
+    gap: 30px;
     margin: 0;
     padding: 0;
 
     & a {
       text-decoration: none;
-      color: #ccc;
+      color: $tq-blue-lighter;
       font-size: 0.95rem;
 
       &.active, &.hover {
-        color: #fff;
+        font-weight: bold;
+        color: $tq-white;
       }
     }
   }
