--- a/src/app/trophy-set-mapping-validation/components/validation-list/validation-list.component.html
+++ b/src/app/trophy-set-mapping-validation/components/validation-list/validation-list.component.html
@@ -10,7 +10,9 @@
             @if ($index !== 0) {
                 <hr class="separator"/>
             }
-            <tq-validation-element [trophySet]="element"/>
+            <tq-validation-element [trophySet]="element"
+                                   [validationStatus]="validationStatus()"
+                                   (candidateAccepted)="acceptCandidate(element.trophySet.id, $event)"/>
         }
     </div>
 }
